Project update. [p][robotic]

--- a/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
+++ b/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
@@ -176,4 +176,4 @@
             }
         }
     ]
-}</script></head><body><x-preact-app data-hydrate class="block"><script type="route-context-props">{"path":"./","pathQuery":"./?a=_a&b=_b&c=_c","restPath":"","restPathQuery":"","query":"?a=_a&b=_b&c=_c","queryVars":{"a":"_a","b":"_b","c":"_c"},"params":{}}</script></x-preact-app></body></html>
+}</script></head><body class="h-full"><x-preact-app data-hydrate class="block h-full"><script type="route-context-props">{"path":"./","pathQuery":"./?a=_a&b=_b&c=_c","restPath":"","restPathQuery":"","query":"?a=_a&b=_b&c=_c","queryVars":{"a":"_a","b":"_b","c":"_c"},"params":{}}</script></x-preact-app></body></html>
