Project update. [p][robotic]

--- a/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
+++ b/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
@@ -38,7 +38,7 @@
             "logo": {
                 "@type": "ImageObject",
                 "@id": "https://clevercanyon.com/#logo",
-                "url": "https://cdn.clevercanyon.com/assets/brands/clevercanyon/logo-on-light-bgs.png",
+                "url": "https://cdn.clevercanyon.com/assets/brands/clevercanyon/logo-on-light-bg.png",
                 "width": 866,
                 "height": 120,
                 "caption": "Clever Canyon"
@@ -62,7 +62,7 @@
             "@id": "https://hop.gdn/#org",
             "url": "https://hop.gdn/",
             "name": "Hop.gdn",
-            "legalName": "Clever Canyon, LLC",
+            "legalName": "Hop.gdn",
             "address": {
                 "@type": "PostalAddress",
                 "@id": "https://hop.gdn/#addr",
@@ -93,7 +93,7 @@
             "logo": {
                 "@type": "ImageObject",
                 "@id": "https://hop.gdn/#logo",
-                "url": "https://cdn.clevercanyon.com/assets/brands/hop/logo-on-light-bgs.png",
+                "url": "https://cdn.clevercanyon.com/assets/brands/hop/logo-on-light-bg.png",
                 "width": 608,
                 "height": 120,
                 "caption": "Hop.gdn"
@@ -121,7 +121,7 @@
             "image": {
                 "@type": "ImageObject",
                 "@id": "http://x.tld/#logo",
-                "url": "http://x.tld/assets/logo.png",
+                "url": "http://x.tld/assets/logo-on-light-bg.png",
                 "width": 608,
                 "height": 120,
                 "caption": "X Tld"
