--- a/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
+++ b/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
@@ -77,7 +77,7 @@
                         "logo": {
                             "@type": "ImageObject",
                             "@id": "https://clevercanyon.com/#logo",
-                            "url": "https://cdn.clevercanyon.com/assets/brands/clevercanyon/logo-on-light-bg.png",
+                            "url": "https://cdn.hop.gdn/assets/brands/clevercanyon/logo-on-light-bg.png",
                             "width": 866,
                             "height": 120,
                             "caption": "Clever Canyon"
@@ -135,7 +135,7 @@
                         "logo": {
                             "@type": "ImageObject",
                             "@id": "https://hop.gdn/#logo",
-                            "url": "https://cdn.clevercanyon.com/assets/brands/hop/logo-on-light-bg.png",
+                            "url": "https://cdn.hop.gdn/assets/brands/hop/logo-on-light-bg.png",
                             "width": 608,
                             "height": 120,
                             "caption": "Hop.gdn"
