Project update. [p][robotic]

--- a/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
+++ b/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
@@ -31,8 +31,8 @@
             globalThis['@clevercanyon/utilities']['preactISOData'] = globalThis['@clevercanyon/utilities']['preactISOData'] || {};
             globalThis['@clevercanyon/utilities']['preactISOData'] = { 'head': { 'styleBundle': './style.css', 'scriptBundle': './script.js' } };
             globalThis['@clevercanyon/utilities'] = globalThis['@clevercanyon/utilities'] || {};
-            globalThis['@clevercanyon/utilities']['preactISOFetcher'] = globalThis['@clevercanyon/utilities']['preactISOFetcher'] || {};
-            globalThis['@clevercanyon/utilities']['preactISOFetcher'] = { 'cache': {} };
+            globalThis['@clevercanyon/utilities']['preactISOData'] = globalThis['@clevercanyon/utilities']['preactISOData'] || {};
+            globalThis['@clevercanyon/utilities']['preactISOData'] = { 'cache': {} };
         </script>
         <script type="module" src="./script.js" data-key="scriptBundle"></script>
         <script type="application/ld+json" data-key="structuredData">
