Project update. [p][robotic]

--- a/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
+++ b/src/tests/preact/apis/iso/ex-imports/fixtures/prerender-spa-for-web.html
@@ -11,81 +11,96 @@
         <meta name="author" content="Jason Caldwell" data-key="author" />
         <link rel="author" type="text/plain" href="./humans.txt" data-key="humans" />
         <link rel="manifest" href="./manifest.json" data-key="manifest" />
-        <link rel="icon" type="image/svg+xml" sizes="any" href="https://x.tld/base/assets/icon.svg" data-key="svgIcon" />
-        <link rel="icon" type="image/png" sizes="any" href="https://x.tld/base/assets/icon.png" data-key="pngIcon" />
-        <link rel="apple-touch-icon" type="image/png" sizes="any" href="https://x.tld/base/assets/icon.png" data-key="appleTouchIcon" />
+        <link rel="icon" type="image/svg+xml" sizes="any" href="https://x.tld/base/assets/brand/icon.svg" data-key="svgIcon" />
+        <link rel="icon" type="image/png" sizes="any" href="https://x.tld/base/assets/brand/icon-2x.png" data-key="pngIcon" />
+        <link rel="apple-touch-icon" type="image/png" sizes="any" href="https://x.tld/base/assets/brand/icon-2x.png" data-key="appleTouchIcon" />
         <meta property="og:locale" content="en_US" data-key="ogLocale" />
         <meta property="og:site_name" content="X Tld" data-key="ogSiteName" />
         <meta property="og:type" content="article" data-key="ogType" />
         <meta property="og:title" content="index" data-key="ogTitle" />
         <meta property="og:description" content="Why is the rum gone?" data-key="ogDescription" />
         <meta property="og:url" content="https://x.tld/base" data-key="ogURL" />
-        <meta property="og:image" content="https://x.tld/base/assets/og-image.png" data-key="ogImage" />
+        <meta property="og:image" content="https://x.tld/base/assets/brand/og-image-2x.png" data-key="ogImage" />
         <meta property="og:image:width" content="2400" data-key="ogImageWidth" />
         <meta property="og:image:height" content="1260" data-key="ogImageHeight" />
-        <meta property="og:article:author" content="Jason Caldwell" data-key="ogArticleAuthor" />
+        <meta property="og:article:author" content="https://jaswrks.com/" data-key="ogArticleAuthor" />
         <link rel="preload" fetchpriority="high" href="./style.css" as="style" data-key="preloadStyleBundle" />
         <link rel="stylesheet" href="./style.css" media="all" data-key="styleBundle" />
-        <script id="global-data" nonce="NWRlMGM5N2U3MzBiNDA3M2I5MGEyZjlmYjg1OWY3MDA=" data-key="globalData">
+        <script id="global-data" nonce="YjA5ODMyYjhiYTNiNDVmMzkwMDZmOGNhMTBlZWQ3ZjM=" data-key="globalData">
             globalThis['@clevercanyon/utilities'] = globalThis['@clevercanyon/utilities'] || {};
             globalThis['@clevercanyon/utilities']['data'] = globalThis['@clevercanyon/utilities']['data'] || {};
             globalThis['@clevercanyon/utilities']['data'] = {
-                'cspNonce': 'NWRlMGM5N2U3MzBiNDA3M2I5MGEyZjlmYjg1OWY3MDA=',
+                'cspNonce': 'YjA5ODMyYjhiYTNiNDVmMzkwMDZmOGNhMTBlZWQ3ZjM=',
                 'head': { 'styleBundle': './style.css', 'scriptBundle': './script.js' },
             };
             globalThis['@clevercanyon/utilities'] = globalThis['@clevercanyon/utilities'] || {};
             globalThis['@clevercanyon/utilities']['fetcher'] = globalThis['@clevercanyon/utilities']['fetcher'] || {};
             globalThis['@clevercanyon/utilities']['fetcher'] = { 'cache': {} };
         </script>
-        <script type="module" nonce="NWRlMGM5N2U3MzBiNDA3M2I5MGEyZjlmYjg1OWY3MDA=" src="./script.js" data-key="scriptBundle"></script>
-        <script type="application/ld+json" nonce="NWRlMGM5N2U3MzBiNDA3M2I5MGEyZjlmYjg1OWY3MDA=" data-key="structuredData">
+        <script type="module" nonce="YjA5ODMyYjhiYTNiNDVmMzkwMDZmOGNhMTBlZWQ3ZjM=" src="./script.js" data-key="scriptBundle"></script>
+        <script type="application/ld+json" nonce="YjA5ODMyYjhiYTNiNDVmMzkwMDZmOGNhMTBlZWQ3ZjM=" data-key="structuredData">
             {
                 "@context": "https://schema.org/",
                 "@graph": [
                     {
-                        "@type": "Corporation",
-                        "@id": "https://clevercanyon.com/#corp",
-                        "url": "https://clevercanyon.com/",
-                        "name": "Clever Canyon",
-                        "legalName": "Clever Canyon LLC",
-                        "address": {
-                            "@type": "PostalAddress",
-                            "@id": "https://clevercanyon.com/#addr",
-                            "streetAddress": "9 N River Rd #660",
-                            "addressLocality": "Auburn",
-                            "addressRegion": "ME",
-                            "postalCode": "04210",
-                            "addressCountry": "US"
-                        },
-                        "founder": {
-                            "@type": "Person",
-                            "@id": "https://jaswrks.com/#founder",
-                            "name": "Jason Caldwell",
-                            "jobTitle": "Engineering Manager, Consultant, Staff Engineer",
-                            "description": "Entrepreneur and full-stack engineer with 20+ years experience.",
-                            "url": "https://jaswrks.com/",
-                            "image": {
-                                "@type": "ImageObject",
-                                "@id": "https://jaswrks.com/#founderImg",
-                                "url": "https://gravatar.hop.gdn/avatar/17c7f6ff2e18895eb11da018bf928c8a3e3603607546426805f29f2a700e693c.png?s=512",
-                                "width": 512,
-                                "height": 512,
-                                "caption": "Jason Caldwell"
+                        "@type": "WebPage",
+                        "@id": "https://x.tld/base#page",
+                        "url": "https://x.tld/base",
+                        "name": "index",
+                        "headline": "index",
+                        "description": "Why is the rum gone?",
+                        "genre": "",
+                        "keywords": "",
+                        "inLanguage": "en-US",
+                        "author": [
+                            { "@id": "https://x.tld/base/#site" },
+                            {
+                                "@type": "Person",
+                                "@id": "https://jaswrks.com/#pageAuthor",
+                                "name": "Jason Caldwell",
+                                "jobTitle": "Engineering Manager, Consultant, Staff Engineer",
+                                "description": "Entrepreneur and full-stack engineer with 20+ years experience.",
+                                "url": "https://jaswrks.com/",
+                                "image": {
+                                    "@type": "ImageObject",
+                                    "@id": "https://jaswrks.com/#pageAuthorImg",
+                                    "url": "https://workers.hop.gdn/utilities/api/gravatar/v1/17c7f6ff2e18895eb11da018bf928c8a3e3603607546426805f29f2a700e693c.png?size=512",
+                                    "width": 512,
+                                    "height": 512,
+                                    "caption": "Jason Caldwell"
+                                }
                             }
-                        },
-                        "foundingDate": "2023-10-03",
-                        "numberOfEmployees": 10,
-                        "slogan": "Cleverly crafted digital brands.",
-                        "description": "We’re transforming ideas into digital realities.",
-                        "logo": {
+                        ],
+                        "datePublished": "",
+                        "dateModified": "",
+                        "mainEntityOfPage": { "@id": "https://x.tld/base#page" },
+                        "primaryImageOfPage": {
                             "@type": "ImageObject",
-                            "@id": "https://clevercanyon.com/#logo",
-                            "url": "https://r2.hop.gdn/assets/brands/clevercanyon/logo-on-light-bg.png",
-                            "width": 866,
-                            "height": 120,
-                            "caption": "Clever Canyon"
+                            "@id": "https://x.tld/base#pagePrimaryImg",
+                            "url": "https://x.tld/base/assets/brand/og-image-2x.png",
+                            "width": 2400,
+                            "height": 1260,
+                            "caption": "Why is the rum gone?"
                         },
-                        "image": { "@id": "https://clevercanyon.com/#logo" },
+                        "image": [{ "@id": "https://x.tld/base#pagePrimaryImg" }],
+                        "about": { "@id": "https://x.tld/base/#site" },
+                        "isPartOf": { "@id": "https://x.tld/base/#site" },
+                        "publisher": { "@id": "https://hop.gdn/#org" }
+                    },
+                    {
+                        "@type": "WebSite",
+                        "@id": "https://x.tld/base/#site",
+                        "url": "https://x.tld/base/",
+                        "name": "X Tld",
+                        "description": "Great things, built on great technology.",
+                        "image": {
+                            "@type": "ImageObject",
+                            "@id": "https://x.tld/base/#logo",
+                            "url": "https://x.tld/base/assets/brand/logo-on-light-bg-2x-2x.png",
+                            "width": 608,
+                            "height": 120,
+                            "caption": "X Tld"
+                        },
                         "sameAs": [
                             "https://twitter.com/clevercanyon",
                             "https://www.linkedin.com/company/clevercanyon",
@@ -94,7 +109,7 @@
                             "https://github.com/clevercanyon",
                             "https://www.npmjs.com/org/clevercanyon"
                         ],
-                        "subOrganization": { "@id": "https://hop.gdn/#org" }
+                        "publisher": { "@id": "https://hop.gdn/#org" }
                     },
                     {
                         "@type": "Organization",
@@ -121,7 +136,7 @@
                             "image": {
                                 "@type": "ImageObject",
                                 "@id": "https://jaswrks.com/#founderImg",
-                                "url": "https://gravatar.hop.gdn/avatar/17c7f6ff2e18895eb11da018bf928c8a3e3603607546426805f29f2a700e693c.png?s=512",
+                                "url": "https://workers.hop.gdn/utilities/api/gravatar/v1/17c7f6ff2e18895eb11da018bf928c8a3e3603607546426805f29f2a700e693c.png?size=512",
                                 "width": 512,
                                 "height": 512,
                                 "caption": "Jason Caldwell"
@@ -134,7 +149,7 @@
                         "logo": {
                             "@type": "ImageObject",
                             "@id": "https://hop.gdn/#logo",
-                            "url": "https://r2.hop.gdn/assets/brands/hop/logo-on-light-bg.png",
+                            "url": "https://r2.hop.gdn/assets/brands/hop/logo-on-light-bg-2x-2x.png",
                             "width": 608,
                             "height": 120,
                             "caption": "Hop.gdn"
@@ -151,19 +166,49 @@
                         "parentOrganization": { "@id": "https://clevercanyon.com/#corp" }
                     },
                     {
-                        "@type": "WebSite",
-                        "@id": "https://x.tld/base/#site",
-                        "url": "https://x.tld/base/",
-                        "name": "X Tld",
-                        "description": "Great things, built on great technology.",
-                        "image": {
-                            "@type": "ImageObject",
-                            "@id": "https://x.tld/base/#logo",
-                            "url": "https://x.tld/base/assets/logo-on-light-bg.png",
-                            "width": 608,
-                            "height": 120,
-                            "caption": "X Tld"
+                        "@type": "Corporation",
+                        "@id": "https://clevercanyon.com/#corp",
+                        "url": "https://clevercanyon.com/",
+                        "name": "Clever Canyon",
+                        "legalName": "Clever Canyon LLC",
+                        "address": {
+                            "@type": "PostalAddress",
+                            "@id": "https://clevercanyon.com/#addr",
+                            "streetAddress": "9 N River Rd #660",
+                            "addressLocality": "Auburn",
+                            "addressRegion": "ME",
+                            "postalCode": "04210",
+                            "addressCountry": "US"
                         },
+                        "founder": {
+                            "@type": "Person",
+                            "@id": "https://jaswrks.com/#founder",
+                            "name": "Jason Caldwell",
+                            "jobTitle": "Engineering Manager, Consultant, Staff Engineer",
+                            "description": "Entrepreneur and full-stack engineer with 20+ years experience.",
+                            "url": "https://jaswrks.com/",
+                            "image": {
+                                "@type": "ImageObject",
+                                "@id": "https://jaswrks.com/#founderImg",
+                                "url": "https://workers.hop.gdn/utilities/api/gravatar/v1/17c7f6ff2e18895eb11da018bf928c8a3e3603607546426805f29f2a700e693c.png?size=512",
+                                "width": 512,
+                                "height": 512,
+                                "caption": "Jason Caldwell"
+                            }
+                        },
+                        "foundingDate": "2023-10-03",
+                        "numberOfEmployees": 10,
+                        "slogan": "Cleverly crafted digital brands.",
+                        "description": "We’re transforming ideas into digital realities.",
+                        "logo": {
+                            "@type": "ImageObject",
+                            "@id": "https://clevercanyon.com/#logo",
+                            "url": "https://r2.hop.gdn/assets/brands/clevercanyon/logo-on-light-bg-2x-2x.png",
+                            "width": 866,
+                            "height": 120,
+                            "caption": "Clever Canyon"
+                        },
+                        "image": { "@id": "https://clevercanyon.com/#logo" },
                         "sameAs": [
                             "https://twitter.com/clevercanyon",
                             "https://www.linkedin.com/company/clevercanyon",
@@ -172,51 +217,7 @@
                             "https://github.com/clevercanyon",
                             "https://www.npmjs.com/org/clevercanyon"
                         ],
-                        "publisher": { "@id": "https://hop.gdn/#org" }
-                    },
-                    {
-                        "@type": "WebPage",
-                        "@id": "https://x.tld/base#page",
-                        "url": "https://x.tld/base",
-                        "name": "index",
-                        "headline": "index",
-                        "description": "Why is the rum gone?",
-                        "genre": "",
-                        "keywords": "",
-                        "inLanguage": "en-US",
-                        "author": [
-                            { "@id": "https://x.tld/base/#site" },
-                            {
-                                "@type": "Person",
-                                "@id": "https://jaswrks.com/#pageAuthor",
-                                "name": "Jason Caldwell",
-                                "jobTitle": "Engineering Manager, Consultant, Staff Engineer",
-                                "description": "Entrepreneur and full-stack engineer with 20+ years experience.",
-                                "url": "https://jaswrks.com/",
-                                "image": {
-                                    "@type": "ImageObject",
-                                    "@id": "https://jaswrks.com/#pageAuthorImg",
-                                    "url": "https://gravatar.hop.gdn/avatar/17c7f6ff2e18895eb11da018bf928c8a3e3603607546426805f29f2a700e693c.png?s=512",
-                                    "width": 512,
-                                    "height": 512,
-                                    "caption": "Jason Caldwell"
-                                }
-                            }
-                        ],
-                        "datePublished": "",
-                        "dateModified": "",
-                        "primaryImageOfPage": {
-                            "@type": "ImageObject",
-                            "@id": "https://x.tld/base#pagePrimaryImg",
-                            "url": "https://x.tld/base/assets/og-image.png",
-                            "width": 2400,
-                            "height": 1260,
-                            "caption": "Why is the rum gone?"
-                        },
-                        "image": [{ "@id": "https://x.tld/base#pagePrimaryImg" }],
-                        "about": { "@id": "https://x.tld/base/#site" },
-                        "isPartOf": { "@id": "https://x.tld/base/#site" },
-                        "publisher": { "@id": "https://hop.gdn/#org" }
+                        "subOrganization": { "@id": "https://hop.gdn/#org" }
                     }
                 ]
             }
@@ -224,7 +225,7 @@
     </head>
     <body class="h-full">
         <x-preact-app data-hydrate class="block h-full">
-            <script type="route-context-props" nonce="NWRlMGM5N2U3MzBiNDA3M2I5MGEyZjlmYjg1OWY3MDA=">
+            <script type="route-context-props" nonce="YjA5ODMyYjhiYTNiNDVmMzkwMDZmOGNhMTBlZWQ3ZjM=">
                 {"path":"./","pathQuery":"./?a=_a&b=_b&c=_c","restPath":"","restPathQuery":"","query":"?a=_a&b=_b&c=_c","queryVars":{"a":"_a","b":"_b","c":"_c"},"params":{}}
             </script>
         </x-preact-app>
